public url bug ifx
en：Fixed the problem that the text is too long when using a public URL on a mobile phone, causing the conversation content to be blocked. Intelligent judgment, automatically display the scroll bar when the conversation window content is insufficient.
zh-cn：修复了手机上使用公共url对话时候，文字太长导致对话内容被遮挡。智能判断，当对话窗口内容益处时候自动显示滚动条。

--- a/web/app/styles/globals.css
+++ b/web/app/styles/globals.css
@@ -93,7 +93,7 @@ html[data-changing-theme] * {
 html,
 body {
   max-width: 100vw;
-  overflow: hidden;
+  overflow: auto;
 }
 
 body {
